--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
-    "start": "concurrently \"cd server && npm run watch\" \"cd client && npm start\""
+    "start": "concurrently \"cd server && npm run dev\" \"cd client && npm start\""
   },
   "repository": {
     "type": "git",
@@ -14,11 +13,11 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "concurrently": "^7.6.0"
-  },
   "bugs": {
     "url": "https://github.com/moreza66/MERN-Challenge--Book-Search-Engine/issues"
   },
-  "homepage": "https://github.com/moreza66/MERN-Challenge--Book-Search-Engine#readme"
+  "homepage": "https://github.com/moreza66/MERN-Challenge--Book-Search-Engine#readme",
+  "devDependencies": {
+    "concurrently": "^7.6.0"
+  }
 }
