--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently \"cd server && npm run dev\" \"cd client && npm start\""
+    "start": "concurrently \"cd server && npm run dev\" \"cd client && npm start\"",
+    "concurrently": "npm start"
   },
   "repository": {
     "type": "git",
