--- a/package.json
+++ b/package.json
@@ -18,10 +18,8 @@
     "url": "https://github.com/moreza66/MERN-Challenge--Book-Search-Engine/issues"
   },
   "homepage": "https://github.com/moreza66/MERN-Challenge--Book-Search-Engine#readme",
-  "devDependencies": {
-    "concurrently": "^7.6.0"
-  },
   "dependencies": {
+    "concurrently": "^7.6.0",
     "dotenv": "^16.0.3",
     "path": "^0.12.7"
   }
