--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently \"cd server && npm run dev\" \"cd client && npm start\"",
+    "NPM_SCRIPT": "concurrently \"cd server && npm run dev\" \"cd client && npm start\"",
+    "start": "npm run NPM_SCRIPT",
     "heroku-start": "cd server && npm run dev && cd client && npm start"
   },
   "repository": {
