--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "NPM_SCRIPT": "concurrently \"cd server && npm run dev\" \"cd client && npm start\"",
-    "start": "npm run NPM_SCRIPT",
+    "start": "concurrently \"cd server && npm run dev\" \"cd client && npm start\"",
     "heroku-start": "cd server && npm run dev && cd client && npm start"
   },
   "repository": {
