--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,9 @@
     "mongoose": "^6.8.3",
     "multer": "^1.4.5-lts.1",
     "multiparty": "^4.2.3",
-    "nodemon": "^2.0.20",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
