--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "concurrently \"cd server && npm run dev\" \"cd client && npm start\"",
-    "heroku-start": "cd server && npm run dev && cd client && npm start"
+    "heroku-start": "cd server && npm run heroku-dev && cd client && npm start"
   },
   "repository": {
     "type": "git",
